Small fix with gallery spacing

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -397,7 +397,7 @@ div.gradient-text {
   a {
     display: inline-block;
     width: 100%;
-    margin: 0 0 1rem 0;
+    margin: 0 0 0rem 0;
     text-decoration: none;
   }
 
